# ton-compress

./: .clang-format  .gitignore  01 - Cells.cpp  02 - Base64, serialization, lz4.cpp  03 - TLB.cpp  04 - TLB 2.cpp  05 - Int256.cpp  06 - Dictionary.cpp  07 - Augmented dictionary.cpp  CMakeLists.txt  run-linux.sh  solution.cpp  solution_dummy_lzma.cpp  solution_evolve.cpp  solution_evolve_lzma_separate_header.cpp  solution_evolve_tiny_lzma.cpp  solution_evolve_tiny_lzma_mini.cpp  solution_lzma_long.cpp  solution_lzma_separate_header.cpp  solution_separate_header.cpp  solution_sorted_lzma_separate_header.cpp  solution_tiny_lzma.cpp  solution_tiny_lzma_bitshuffle.cpp  solution_zpaq.cpp  stats.cpp
ann/: CMakeLists.txt  a.py  best_bit_lstm_model256.pth  best_bit_lstm_model_jit128.pt  concatinatedData.json  contents_combined.txt  fc.py  lstm.py  lstm_fc.py  model_arith.cpp  model_arith.h
ann/arithcoder/: CMakeLists.txt  FrequencyTable.cpp  FrequencyTable.hpp
ann/models/: best_bit_lstm_model128.pth  best_bit_lstm_model_192_48_1.pth  best_bit_lstm_model_192_48_1_jit.pt  best_bit_lstm_model_concatinated.pth  best_bit_lstm_model_concatinated_jit.pt  best_bit_lstm_model_jit256.pt
include/crypto/block/: block-auto.h  block-parse.h  block.h
include/crypto/vm/: boc.h  excno.hpp  large-boc-serializer.h
include/tdutils/td/utils/: Status.h  config.h  logging.h
include/ton/: ton-types.h
tests/: 1-002.txt  1-004.txt  1-005.txt  1-014.txt  1-016.txt  1-018.txt  1-019.txt  1-022.txt  1-024.txt  requirements.txt  run_tests.py  run_tests2.py
tests/cases/: 1-001.txt  1-003.txt  1-006.txt  1-007.txt  1-008.txt  1-009.txt  1-010.txt  1-011.txt  1-012.txt  1-013.txt  1-015.txt  1-017.txt  1-020.txt  1-021.txt  1-023.txt  1-025.txt
